test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_cast_none_array.plx
pub fn main(none) i32 {
    x: i32 = 20
    return cast<[2]none>(x)
}
